kubernetes/apps/base/harbor/harbor/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - 'harbor.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: harbor-core
          port: 80
          weight: 100
